fixed the overflowing of the footer when resizing the window

--- a/assets/style.css
+++ b/assets/style.css
@@ -365,9 +365,9 @@ nav span {
 	margin: 0 .5%;
 }
 
-.copyright p {
-	font-size: 12px;
-	color: white;
+.copyright span {
+	display: flex;
+	flex-wrap: nowrap;
 }
 
 
@@ -505,8 +505,9 @@ nav span {
 		display: none;
 	}
 
+	
 
-	.copyright img{
+	/* .copyright img{
 		display:inline-block;
 		height:auto;
 	}
@@ -515,5 +516,12 @@ nav span {
 		display:inline;
 		color:white;
 
+	} */
+}
+
+@media screen and (max-width:575px){
+	.copyright {
+		flex-direction: column;
 	}
+
 }
